# oxide

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
liboxide/: Cargo.toml
liboxide/src/: lib.rs
src/: main.rs  tls-stub-32.asm  tls-stub-64.asm
stub/: Cargo.toml  build.rs
stub/src/: main.rs  trampoline-32.asm  trampoline-64.asm
