[package]
name = "stub"
version = "0.2.0"
authors = ["purple"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
exe = "0.5.1"
liboxide = { path = "../liboxide" }
winapi = { version = "0.3.9", features = ["errhandlingapi", "libloaderapi", "memoryapi", "impl-default"] }

[profile.release]
strip = "symbols"